# HoneyBadgerMPC

./: .gitignore  .gitmodules
apps/fabric/: Client.py  Server.py  get_inputmask.py  input_mask.py  send_input_request.py  start_recon.py  start_server.py
apps/fabric/conf/: config.toml  hyper.ini
apps/fabric/scripts/: start_server.sh
apps/fabric/src/client/: Client.py  start_client.py  start_client_0.py  start_client_1.py  start_client_2.py  start_client_3.py  start_client_copy.py  testCnt.py
apps/fabric/src/libsnark/: CMakeLists.txt
apps/fabric/src/libsnark/src/: CMakeLists.txt  cmp.cpp  commit.cpp  prove.cpp  sha256_value_comparison_gadget.hpp  util.tcc  verify.cpp
apps/fabric/src/server/: Server.py  add.py  calc_share.py  cmp.py  eq.py  mul.py  one_minus_share.py  reconstruct.py  start_server.py  verify.py  verify_eq.py
apps/fabric/src/supplychain/v1/: hand_off_item.py  hand_off_item_to_next_provider.py  register_item.py  source_item.py  start_client_1.py  start_client_1_copy.py
apps/fabric/src/supplychain/v2/: start_client_2.py  verify
apps/fabric/src/supplychain/v3/: query_number.py  query_positions.py  record_shipment.py  start_client_3.py
apps/fabric/src/utils/: commitment.py  commitment_copy.py  utils.py
apps/fabric/test/: config.toml  server.toml  test.sh  testCnt.py  test_client.py  test_cmp.py  test_mul.py  test_nc.sh  test_recon.py  test_server.py
honeybadgermpc/ntl/: hbmpc_ntl_helpers.cpp
honeybadgermpc/progs/mixins/: share_comparison.py
honeybadgermpc/utils/: misc.py
