include_directories(.)

add_executable(
  prove

  prove.cpp
)
target_link_libraries(
  prove

  snark
)
target_include_directories(
  prove

  PUBLIC
  ${DEPENDS_DIR}/libsnark
  ${DEPENDS_DIR}/libsnark/depends/libfqfft
)

add_executable(
  verify

  verify.cpp
)
target_link_libraries(
  verify

  snark
)
target_include_directories(
  verify

  PUBLIC
  ${DEPENDS_DIR}/libsnark
  ${DEPENDS_DIR}/libsnark/depends/libfqfft
)